Tue Oct  8 04:12:45 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add a missing
	  else clause to unbreak with `cp932`, etc.

	* misc/ruby-mode.el (ruby-mode-set-encoding): Ditto.

Tue Oct  8 03:57:34 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Use
	  `default-buffer-file-coding-system` if the :prefer-utf-8
	  property is not available.

	* misc/ruby-mode.el (ruby-mode-set-encoding): Ditto.

	* misc/ruby-additional.el (ruby-encoding-map): Override the
	  default value.

Tue Oct  8 03:19:19 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add support
	  for `prefer-utf-8` which was introduced in Emacs trunk.

	* misc/ruby-additional.el (ruby-encoding-map): Add a mapping from
	  `japanese-cp932` to `cp932` to fix the problem where saving a
	  source file written in Shift_JIS twice would end up having
	  `coding: japanese-cp932` which Ruby could not recognize.

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add support
	  for encodings mapped to nil in `ruby-encoding-map`.

	* misc/ruby-additional.el (ruby-encoding-map): Map `us-ascii` and
	  `utf-8` to nil by default, meaning they need not be explicitly
	  declared in magic comment.

	* misc/ruby-additional.el (ruby-encoding-map): Add type
	  declaration for better customize UI.

	* misc/ruby-mode.el: Ditto for the above.

Tue Oct  8 00:14:53 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el: Add a standard header and footer,
	  including (provide 'ruby-additional).

Mon Oct  7 22:52:45 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-space-can-be-expanded-p):
	  Return nil to avoid "end" insertion when in smartparens-mode
	  that is configured to insert "end" for the same keyword.

	* misc/ruby-electric.el (ruby-electric-keywords): New custom
	  variable to replace `ruby-electric-simple-keywords-re` with.
