@@ -448,7 +448,7 @@ Emacs to Ruby."
        ((progn
           (forward-char -1)
           (and (looking-at "\\?")
-               (or (eq (char-syntax (char-before (point))) ?w)
+               (or (eq (char-syntax (preceging-char)) ?w)
                    (ruby-special-char-p))))
         nil)
        ((and (eq option 'heredoc) (< space 0))
@@ -1201,14 +1201,14 @@ balanced expression is found."
     (let ((orig (point)) (end (progn (ruby-forward-sexp) (point))))
       (when (eq (char-before) ?\})
 	(delete-char -1)
-	(if (eq (char-syntax (char-before)) ?w)
+	(if (eq (char-syntax (preceding-char)) ?w)
 	    (insert " "))
 	(insert "end")
-	(if (eq (char-syntax (char-after)) ?w)
+	(if (eq (char-syntax (following-char)) ?w)
 	    (insert " "))
 	(goto-char orig)
 	(delete-char 1)
-	(if (eq (char-syntax (char-before)) ?w)
+	(if (eq (char-syntax (preceding-char)) ?w)
 	    (insert " "))
 	(insert "do")
 	(when (looking-at "\\sw\\||")
@@ -1218,7 +1218,7 @@ balanced expression is found."
 
 (defun ruby-do-end-to-brace ()
   (when (and (or (bolp)
-		 (not (memq (char-syntax (char-before)) '(?w ?_))))
+		 (not (memq (char-syntax (preceding-char)) '(?w ?_))))
 	     (looking-at "\\<do\\(\\s \\|$\\)"))
     (let ((orig (point)) (end (progn (ruby-forward-sexp) (point))))
       (backward-char 3)
